menambah data di pull

--- a/pull.html
+++ b/pull.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>pull
-        
-    </h3>
+    <h3>pull</h3>
+    <h3>merge</h3>
 </body>
 </html>
